--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "lodash": "^4.17.15",
     "prop-types": "^15.7.2",
     "qs": "^6.9.4",
+    "portfinder": "^1.0.28",
     "react": "^16.13.1",
     "react-hot-loader": "^4.12.21",
     "react-redux": "^7.2.0",
