--- a/package.json
+++ b/package.json
@@ -19,9 +19,9 @@
     "antd": "^4.3.5",
     "axios": "^0.19.2",
     "lodash": "^4.17.15",
+    "portfinder": "^1.0.28",
     "prop-types": "^15.7.2",
     "qs": "^6.9.4",
-    "portfinder": "^1.0.28",
     "react": "^16.13.1",
     "react-hot-loader": "^4.12.21",
     "react-redux": "^7.2.0",
@@ -30,7 +30,8 @@
     "react-router-dom": "^5.2.0",
     "redux": "^4.0.5",
     "redux-devtools-extension": "^2.13.8",
-    "redux-saga": "^1.1.3"
+    "redux-saga": "^1.1.3",
+    "request": "^2.88.2"
   },
   "devDependencies": {
     "@babel/cli": "^7.10.3",
