--- a/package.json
+++ b/package.json
@@ -18,6 +18,10 @@
     "animate.css": "^4.1.0",
     "antd": "^4.3.5",
     "axios": "^0.19.2",
+    "echarts": "^4.8.0",
+    "echarts-gl": "^1.1.1",
+    "highcharts": "^8.1.2",
+    "immer": "^7.0.7",
     "lodash": "^4.17.15",
     "portfinder": "^1.0.28",
     "prop-types": "^15.7.2",
